--- a/Net CampMyProject/Views/Films/Edit.cshtml
+++ b/Net CampMyProject/Views/Films/Edit.cshtml
@@ -53,6 +53,11 @@
                 <span asp-validation-for="Budget" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Story" class="control-label"></label>
+                <input asp-for="Story" class="form-control" />
+                <span asp-validation-for="Story" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Languages" class="control-label"></label>
                 <input asp-for="Languages" class="form-control" />
                 <span asp-validation-for="Languages" class="text-danger"></span>
@@ -61,7 +66,12 @@
                 <label asp-for="Awards" class="control-label"></label>
                 <input asp-for="Awards" class="form-control" />
                 <span asp-validation-for="Awards" class="text-danger"></span>
-            </div>            
+            </div>
+            <div class="form-group">
+                <label asp-for="Country" class="control-label"></label>
+                <input asp-for="Country" class="form-control" />
+                <span asp-validation-for="Country" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="BoxOffice" class="control-label"></label>
                 <input asp-for="BoxOffice" class="form-control" />
@@ -82,7 +92,23 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<script type="text/javascript">
+    function loadFrame(){
+        document.getElementById('frame').scrollTop = 310;
+        document.getElementById('frame').scrollLeft = 40;
+        var f = window.frames["f"].contentWindow.location.href;
+    }
+</script>
+<body onload="loadFrame()">
+ 
+<div id="frame">
+
+    <iframe src="@Model.WikiUrl" width="1100" height="1000" scrolling="yes"></iframe>
+</div>
+</body>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
