--- a/Net CampMyProject/wwwroot/css/site.css
+++ b/Net CampMyProject/wwwroot/css/site.css
@@ -17,7 +17,11 @@ a {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
-
+.btn-primary-green {
+    color: green;
+    background-color: greenyellow;
+    border-color: green;
+}
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
