- BaseRepository has been implemented; - FilmsRepository reworked; - CommentsRepository has been implemented; - PersonsRepository has been implemented; - GenresRepository has been implemented; - Controllers reworked; - BaseEntity has been implemented;

--- a/Net CampMyProject/Views/Shared/_Layout.cshtml
+++ b/Net CampMyProject/Views/Shared/_Layout.cshtml
@@ -74,6 +74,9 @@
                     <li>
                         <a asp-area="" asp-controller="FilmRatings" asp-action="Index">F.Ratings</a>
                     </li>
+                    <li>
+                        <a asp-area="" asp-controller="Genres" asp-action="Index">F.Ratings</a>
+                    </li>
                 </ul>
 
             </div>
