--- a/Net CampMyProject/Views/Films/List.cshtml
+++ b/Net CampMyProject/Views/Films/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Net_CampMyProject.Data.Models;
-@using Microsoft.Data.SqlClient
+@using Microsoft.Data.SqlClient;
 @model Net_CampMyProject.Models.ViewModels.FilmsIndexViewModel
 
 @{
@@ -7,26 +7,39 @@
 
     var isAdmin = User.IsInRole(Roles.Admin);
     var revertedSortOrder = Model.SortOrder == SortOrder.Ascending ? SortOrder.Descending : SortOrder.Ascending;
+    var filmResults = Model.Films.Count;
+    var filter = Model.Filter;
 }
 
-<div>
-    <div class="text-right">
-        <div class="dropdown mb-2 mr-1">
-            <strong>Sort by:</strong>
-            <button class="btn btn-secondary dropdown-toggle w-25 h-25" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                @Model.SortBy
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <span class="dropdown-item">
-                    <a asp-controller="Films" asp-action="List" asp-route-filter="@Model.Filter" asp-route-sortBy="@nameof(Film.Title)" asp-route-sortOrder="@revertedSortOrder" asp-route-page="1">Title</a>
-                </span>
-                <span class="dropdown-item">
-                    <a asp-controller="Films" asp-action="List" asp-route-filter="@Model.Filter" asp-route-sortBy="@nameof(Film.ReleaseDate)" asp-route-sortOrder="@revertedSortOrder" asp-route-page="1">Release Date</a>
-                </span>
-            </div>
-        </div>
-    </div>
 
+<div>
+    @if (filmResults != 0)
+    {
+        <div class="text-right">
+            <div class="dropdown mb-2 mr-1">
+                <strong>Sort by:</strong>
+                <button class="btn btn-secondary dropdown-toggle w-25 h-25" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    @Model.SortBy
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <span class="dropdown-item">
+                        <a asp-controller="Films" asp-action="List" asp-route-filter="@Model.Filter" asp-route-sortBy="@nameof(Film.Title)" asp-route-sortOrder="@revertedSortOrder">Title</a>
+                    </span>
+                    <span class="dropdown-item">
+                        <a asp-controller="Films" asp-action="List" asp-route-filter="@Model.Filter" asp-route-sortBy="@nameof(Film.ReleaseDate)" asp-route-sortOrder="@revertedSortOrder">Release Date</a>
+                    </span>
+                </div>
+            </div>
+
+        </div>
+    }
+
+    @if (filmResults == 0 && filter == FilmsFilterType.Liked)
+    {
+        <div>
+            <h4>You didn't like any movies</h4>
+        </div>
+    }
     <div>
         @foreach (var film in Model.Films)
         {
@@ -53,7 +66,7 @@
                             </div>
                             <div class="row my-2">
                                 <div class="col-12 col-sm-3 text-center">
-                                    <img class="rounded-lg" width="150" height="200" src="@film.ImgUrl" />
+                                    <img class="rounded-lg" width="150" height="200" src="@film.ImgUrl"/>
                                 </div>
 
                                 <div class="col-md-5 ">
@@ -78,7 +91,7 @@
                                                 <span>
                                                     @i.Genre.GenreType
 
-                                                    @if (film.Genres.Select(c => c.Genre.GenreType).FirstOrDefault() == i.Genre.GenreType)
+                                                    @if (film.Genres.Select(c => c.Genre.GenreType).LastOrDefault() != i.Genre.GenreType)
                                                     {
                                                         <span>,</span>
                                                     }
@@ -115,7 +128,7 @@
                                     @foreach (var rating in film.Ratings)
                                     {
                                         <span>
-                                            <p><a href="@rating.Source.ResourceWebsite">@rating.Rating.Replace("Користувачі Google", "").Replace("користувачів", "користувачів Google")</a></p>
+                                            <p><a href="@rating.Source.ResourceWebsite">@rating.Rating - @(rating.Source.ResourceWebsite.Split("//").ElementAt(1).Split("/").ElementAt(0).Replace("www.", ""))</a></p>
                                         </span>
                                     }
                                 </div>
@@ -145,7 +158,7 @@
     <div class="p-4 text-center">
         @if (Model.PaginationPageViewModel.HasPreviousPage)
         {
-            <a asp-action="Index"
+            <a asp-action="List"
                asp-route-page="@(Model.PaginationPageViewModel.PageNumber - 1)"
                class="btn btn-outline-dark">
                 <i class="glyphicon glyphicon-chevron-left"></i>
@@ -156,7 +169,7 @@
         @if (Model.PaginationPageViewModel.HasNextPage)
         {
 
-            <a asp-action="Index"
+            <a asp-action="List"
                asp-route-page="@(Model.PaginationPageViewModel.PageNumber + 1)"
                class="btn btn-outline-dark">
 
