--- a/Net CampMyProject/Views/Shared/_LoginPartial.cshtml
+++ b/Net CampMyProject/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,24 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+<div class="text-center">
+   
+        @if (SignInManager.IsSignedIn(User))
+        {
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-white-50" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-white-50">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-white-50" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-white-50" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>
+            <div class="text-center">
+                <a class="text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+                <a class="text-dark" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+            </div>
+        }
+        else
+        {
+            <div>
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            </div>
+            <div class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            </div>
+        }
+    
+</div>
